--- a/dataset3/aggregator/aggregator.ipynb
+++ b/dataset3/aggregator/aggregator.ipynb
@@ -36,6 +36,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "5923b867",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HI\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"HI\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "id": "47bf0ee3",
    "metadata": {},
@@ -601,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "590a1821",
    "metadata": {},
    "outputs": [],
@@ -628,8 +646,9 @@
     "\n",
     "**Input:**\n",
     "\n",
-    "Alice loves baking cakes. She spends her weekends experimenting with new recipes. Her kitchen is always full of sweet smells and delicious treats.  \n",
-    "Recently, she started training for a marathon. Running helps her stay focused and healthy. She trains every morning before work.\n",
+    "Alice loves baking cakes.Recently, she started training for a marathon. Running helps her stay focused and healthy. She trains every morning before work.\n",
+    "She spends her weekends experimenting with new recipes. Her kitchen is always full of sweet smells and delicious treats.  \n",
+    "\n",
     "\n",
     "**Output:**\n",
     "\n",
@@ -641,8 +660,8 @@
     "\n",
     "**Input:**\n",
     "\n",
-    "The Great Wall of China is one of the most famous landmarks in the world. It stretches over 13,000 miles and was built to protect against invasions. Tourists from all over the world visit the wall every year.  \n",
-    "In other parts of Asia, ancient architecture also draws large crowds. Angkor Wat in Cambodia, for example, is another stunning historic site.\n",
+    "The Great Wall of China is one of the most famous landmarks in the world.In other parts of Asia, ancient architecture also draws large crowds. Angkor Wat in Cambodia, for example, is another stunning historic site.\n",
+    "It stretches over 13,000 miles and was built to protect against invasions. Tourists from all over the world visit the wall every year.  \n",
     "\n",
     "**Output:**\n",
     "\n",
@@ -1316,6 +1335,42 @@
     "    persu=persuasion,\n",
     "    senti=sentiment\n",
     "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "914788ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POS: Raj/NN is/DT a/NN footballer/NN He/IN like/VBZ to/TO play/VBZ football/NN Rohit/NN reads/VBZ comics/NN everyday/VBD with/VBZ his/NN friends/NNS./.\n",
+      "\n",
+      "I can see that the output should be Raj/NN/NN is/DT/NN a/NN/NN footballer/NN/NN He/IN/NN like/VBZ/NN to/TO\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence='Raj is a footballer. He like to play football. Rohit reads comics everyday with his friends'\n",
+    "print('POS:', pos(sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "b23f9939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sentence='Raj is a footballer. He like to play football. Rohit reads comics everyday with his friends'\n",
+    "# print('POS:', pos(sentence))\n",
+    "# print(\"NER\", ner(sentence))\n",
+    "# print('CO Reference:', co_reference(sentence))\n",
+    "# print(detect_language)\n",
+    "# print('Topic Segmentation:', topic_segment(sentence))\n"
    ]
   },
   {
