--- a/Expert Datatset/Engagement/dataset.ipynb
+++ b/Expert Datatset/Engagement/dataset.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "a87639c6",
    "metadata": {},
    "outputs": [
@@ -158,13 +158,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label: Persona appeal  \n",
-      "<reason>The sentence aligns the recommendation with the user's lifestyle and personal identity by mentioning their new Tesla Model 3 and the specific battery protection. It also tailors the conversation towards understanding the user's needs, emphasizing the persona appeal.</reason>\n"
+      "Label: Logical appeal  \n",
+      "<reason>The sentence uses a cost-benefit argument, comparing the daily cost of the insurance to a common daily expense (morning coffee). Additionally, it lists the types of coverage provided, presenting factual information to support its persuasive intent.</reason>\n"
      ]
     }
    ],
    "source": [
-    "print(generate(\"Welcome! I'm glad to help you with motor insurance for your new Tesla Model 3. Our policies offer comprehensive coverage for electric vehicles, including battery protection. Let's discuss the options that best suit your needs.\"))"
+    "print(generate(\"Our comprehensive motor insurance covers accidents, theft, and damage, with premiums starting from just $1.20 a day — less than your morning coffee.\"))"
    ]
   },
   {
