--- a/Expert Datatset/Engagement/dataset.ipynb
+++ b/Expert Datatset/Engagement/dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "d81fcd20",
    "metadata": {},
    "outputs": [
@@ -17,8 +17,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 6 files: 100%|██████████| 6/6 [03:32<00:00, 35.41s/it] \n",
-      "Loading checkpoint shards: 100%|██████████| 6/6 [02:50<00:00, 28.37s/it]\n"
+      "/DATA/rohan_kirti/miniconda3/envs/nilenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Loading checkpoint shards: 100%|██████████| 6/6 [00:08<00:00,  1.44s/it]\n"
      ]
     }
    ],
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "32ea63dc",
    "metadata": {},
    "outputs": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "06468fe0",
    "metadata": {},
    "outputs": [],
@@ -104,7 +105,7 @@
     "Example 1:  \n",
     "Sentence: \"This plan saves you $200 annually compared to your current policy while offering the same coverage.\"  \n",
     "Label: Logical appeal  \n",
-    "<reason>The sentence presents a cost comparison and equivalent coverage, which is a fact-based logical argument.</reason>  \n",
+    "<reason>The plan presents a cost comparison and equivalent coverage, which is a fact-based logical argument.</reason>  \n",
     "\n",
     "Example 2:  \n",
     "Sentence: \"Our company has been rated #1 in customer satisfaction for five years in a row.\"  \n",
@@ -129,7 +130,7 @@
     "Example 6:  \n",
     "Sentence: \"This policy covers liability, collision, and comprehensive damage.\"  \n",
     "Label: Default  \n",
-    "<reason>The sentence is purely informative and describes coverage without persuasive elements.</reason>  \n",
+    "<reason>The policy coverage is purely informative and describes coverage without persuasive elements.</reason>  \n",
     "\n",
     "Now, for the sentence provided below, identify the persuasion strategy and give the reasoning inside <reason> tags as instructed.  \n",
     "\n",
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "a87639c6",
    "metadata": {},
    "outputs": [
@@ -159,7 +160,7 @@
      "output_type": "stream",
      "text": [
       "Label: Logical appeal  \n",
-      "<reason>The sentence uses a cost-benefit argument, comparing the daily cost of the insurance to a common daily expense (morning coffee). Additionally, it lists the types of coverage provided, presenting factual information to support its persuasive intent.</reason>\n"
+      "<reason>The sentence presents a factual comparison between the cost of the insurance premium and a daily expense (morning coffee), which is a logical and cost-benefit argument.</reason>\n"
      ]
     }
    ],
