--- a/Expert Datatset/Engagement/dataset.ipynb
+++ b/Expert Datatset/Engagement/dataset.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "2780a871",
    "metadata": {},
    "outputs": [],
@@ -243,10 +243,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "4ca8bc94",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -258,7 +265,7 @@
    "source": [
     "input_path=\"/DATA/rohan_kirti/niladri/Expert Datatset/Book1.csv\"\n",
     "output_path=\"/DATA/rohan_kirti/niladri/Expert Datatset/Engagement/results.csv\"\n",
-    "process_csv_with_pandas(input_path, output_path, start_from=4)"
+    "process_csv_with_pandas(input_path, output_path, start_from=0)"
    ]
   }
  ],
