--- a/Expert Datatset/Engagement/dataset.ipynb
+++ b/Expert Datatset/Engagement/dataset.ipynb
@@ -19,7 +19,7 @@
      "text": [
       "/DATA/rohan_kirti/miniconda3/envs/nilenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 6/6 [00:08<00:00,  1.44s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 6/6 [00:07<00:00,  1.31s/it]\n"
      ]
     }
    ],
@@ -69,36 +69,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "06468fe0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate(sentence:str):\n",
-    "    \n",
-    "    prompt = f\"\"\"You are given a sentence.  \n",
+    "    prompt = f\"\"\"You are a Persuasion Strategy labeling expert.\n",
+    "    You are given an utterance.  \n",
     "Your task is to identify and label the persuasion strategy it uses from the defined list of six strategies.  \n",
     "You must also clearly explain why that strategy was chosen, and your explanation MUST be enclosed inside <reason> and </reason> tags exactly.  \n",
     "\n",
-    "Guidelines for labeling:  \n",
-    "- Read the sentence carefully and determine its primary persuasion approach.  \n",
-    "- Only select ONE label from the given six strategies.  \n",
-    "- The label should match the strategy whose description aligns most closely with the intent and tone of the sentence.  \n",
-    "- When writing the reasoning, explain the specific features, keywords, or message style in the sentence that make it fit the chosen persuasion strategy.  \n",
+    "\n",
+    "\n",
+    " Guidelines for labeling:  \n",
+    "- Read the utterance carefully and determine its primary persuasion approach.  \n",
+    "- Select the persuasion strategy whose description aligns most closely with the utterance's content and intent.  \n",
+    "- When writing the reasoning, explain the specific features, keywords, or message style in the utterance that make it fit the chosen persuasion strategy.  \n",
     "- The reasoning MUST be enclosed inside <reason> and </reason> tags — this is mandatory.  \n",
     "- Be concise but clear, ensuring the explanation makes it obvious why that persuasion type applies.  \n",
     "\n",
-    "Persuasion strategies:  \n",
-    "1. Logical appeal – Uses factual reasoning, comparisons, or cost-benefit arguments to persuade.  \n",
-    "2. Credibility appeal – Highlights trustworthiness, reputation, or reliability of the provider or source.  \n",
-    "3. Emotional appeal – Focuses on feelings of safety, comfort, reassurance, or peace of mind.  \n",
-    "4. Personal appeal – Directly tailors the recommendation to the user’s stated needs or preferences.  \n",
-    "5. Persona appeal – Aligns the recommendation with the user’s lifestyle, habits, or personal identity.  \n",
-    "6. Default – Provides neutral, purely informative content without persuasion.  \n",
+    "\n",
+    "\n",
+    "### Persuasion strategies:  \n",
+    "\n",
+    "1. Logical appeal – Uses factual reasoning, statistics, verifiable claims, comparisons, or cost–benefit arguments to persuade.  \n",
+    "   - Even if one factual statement or claim is present (e.g., a price comparison, performance data, or measurable outcome), it qualifies as logical appeal, unless another strategy’s intent is more dominant.  \n",
+    "   - Examples: “This plan saves you $200 annually.” / “Our product is 25% more efficient than others.”  \n",
+    "\n",
+    "2. Credibility appeal – Builds trust by emphasizing the trustworthiness, expertise, qualifications, or proven track record of the provider or source.  \n",
+    "   - This includes references to awards, rankings, certifications, industry recognition, or customer satisfaction ratings.  \n",
+    "   - Example indicators: “Rated 1 by…”, “Certified by…”, “Trusted by over 1 million customers.”  \n",
+    "\n",
+    "3. Emotional appeal – Persuades by evoking emotions such as safety, comfort, fear, pride, hope, or peace of mind.  \n",
+    "   - Often uses reassuring or emotive language to create a personal emotional response rather than presenting objective facts.  \n",
+    "   - Example indicators: “Feel secure knowing…”, “Protect what matters most…”, “Imagine the joy of…”  \n",
+    "\n",
+    "4. Personal appeal – Directly tailors the recommendation to the specific needs, concerns, or requests that the user has previously expressed.  \n",
+    "   - This strategy explicitly references what the user wants or has stated, making it a targeted recommendation.  \n",
+    "   - Example indicators: “Since you said you travel frequently…”, “Because you prefer low-maintenance options…”  \n",
+    "\n",
+    "5. Persona appeal – Connects the recommendation to the user’s lifestyle, habits, values, or identity rather than a specific request.  \n",
+    "   - Often uses “if you are the kind of person who…” framing or aligns features with an implied personality type.  \n",
+    "   - Example indicators: “Perfect for adventure seekers…”, “If you enjoy luxury and comfort…”  \n",
+    "\n",
+    "6. Default – Provides neutral, purely descriptive information without persuasive elements.  \n",
+    "   - No attempt to influence the decision is made; it is strictly informational.  \n",
+    "   - Example indicators: “Includes liability, collision, and comprehensive coverage.”  \n",
+    "\n",
+    "\n",
     "\n",
     "Output format:  \n",
+    "\n",
     "Label: <strategy name>  \n",
-    "<reason>Reasoning for why this strategy was chosen, based on sentence features.</reason>  \n",
+    "<reason>Reasoning for why this strategy was chosen, based on utterance features.</reason>  \n",
+    "\n",
     "\n",
     "Few-shot examples:  \n",
     "\n",
@@ -132,15 +157,15 @@
     "Label: Default  \n",
     "<reason>The policy coverage is purely informative and describes coverage without persuasive elements.</reason>  \n",
     "\n",
-    "Now, for the sentence provided below, identify the persuasion strategy and give the reasoning inside <reason> tags as instructed.  \n",
+    "Now, identify the persuasion strategy and give the reasoning inside <reason> tags as instructed.  \n",
     "\n",
     "Sentence: \"{sentence}\"  \n",
     "Label:  \n",
     "<reason></reason>  \n",
     "\"\"\"\n",
-    "   \n",
-    "    messages = [      \n",
-    "        {\"role\": \"system\", \"content\": \"you are a helpful assistant. Label the sentence based on Persuassion Strategy and provide the reason\"},\n",
+    "\n",
+    "    messages = [\n",
+    "        {\"role\": \"system\", \"content\": \"you are a helpful assistant. Label the utterance based on Persuasion Strategy and provide the reason\"},\n",
     "        {\"role\": \"user\",  \"content\": prompt},\n",
     "    ]\n",
     "\n",
@@ -151,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a87639c6",
    "metadata": {},
    "outputs": [
@@ -160,7 +185,7 @@
      "output_type": "stream",
      "text": [
       "Label: Logical appeal  \n",
-      "<reason>The sentence presents a factual comparison between the cost of the insurance premium and a daily expense (morning coffee), which is a logical and cost-benefit argument.</reason>\n"
+      "<reason>The statement gives a factual comparison between the cost of the insurance and something familiar like a morning coffee. It also outlines the coverage details, which are verifiable claims.</reason>\n"
      ]
     }
    ],
@@ -170,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2780a871",
    "metadata": {},
    "outputs": [],
