--- a/Expert Datatset/Engagement/dataset.ipynb
+++ b/Expert Datatset/Engagement/dataset.ipynb
@@ -19,7 +19,7 @@
      "text": [
       "/DATA/rohan_kirti/miniconda3/envs/nilenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 6/6 [00:07<00:00,  1.31s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 6/6 [00:07<00:00,  1.30s/it]\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "06468fe0",
    "metadata": {},
    "outputs": [],
@@ -95,27 +95,27 @@
     "\n",
     "1. Logical appeal – Uses factual reasoning, statistics, verifiable claims, comparisons, or cost–benefit arguments to persuade.  \n",
     "   - Even if one factual statement or claim is present (e.g., a price comparison, performance data, or measurable outcome), it qualifies as logical appeal, unless another strategy’s intent is more dominant.  \n",
-    "   - Examples: “This plan saves you $200 annually.” / “Our product is 25% more efficient than others.”  \n",
+    "   - Examples: “ Welcome! I'm glad to help you with motor insurance for your new Tesla Model 3. Our policies offer comprehensive coverage for electric vehicles, including battery protection. Let's discuss the options that best suit your needs.” / “ We have several add-on covers that can enhance your insurance policy for the Royal Enfield Himalayan. Consider options like engine protection, zero depreciation, and roadside assistance to ensure comprehensive coverage for your bike. Let's discuss which add-ons would be most beneficial for you.”  \n",
     "\n",
     "2. Credibility appeal – Builds trust by emphasizing the trustworthiness, expertise, qualifications, or proven track record of the provider or source.  \n",
     "   - This includes references to awards, rankings, certifications, industry recognition, or customer satisfaction ratings.  \n",
-    "   - Example indicators: “Rated 1 by…”, “Certified by…”, “Trusted by over 1 million customers.”  \n",
+    "   - Example indicators: “ Bajaj Allianz is a trusted name in the insurance industry, known for its comprehensive coverage and quick claim settlement process. They offer a range of motor insurance plans tailored to meet the specific needs of bike owners like you. Let's explore the options together to find the perfect fit for your Royal Enfield Interceptor 650.”, “ Of course! I'd be happy to provide a quote for comprehensive coverage and roadside assistance for your 2022 Royal Enfield Classic 350. Let's work together to find the best plan that fits your needs and budget. I'll send you the quote shortly.”  \n",
     "\n",
     "3. Emotional appeal – Persuades by evoking emotions such as safety, comfort, fear, pride, hope, or peace of mind.  \n",
     "   - Often uses reassuring or emotive language to create a personal emotional response rather than presenting objective facts.  \n",
-    "   - Example indicators: “Feel secure knowing…”, “Protect what matters most…”, “Imagine the joy of…”  \n",
+    "   - Example indicators: “ We're glad to hear you're interested in roadside assistance. Our partner, Reliance General, offers excellent roadside assistance services, including battery jump-starts, tire changes, and towing, to ensure you're never stranded on the road. Let's review the plans that include this valuable feature.”, “ Our comprehensive plan also includes roadside assistance specifically for electric vehicles. This means you'll have help whenever you need it, whether it's charging assistance, towing, or battery jump-starting. We want to make sure you're always on the move with confidence.”  \n",
     "\n",
     "4. Personal appeal – Directly tailors the recommendation to the specific needs, concerns, or requests that the user has previously expressed.  \n",
     "   - This strategy explicitly references what the user wants or has stated, making it a targeted recommendation.  \n",
-    "   - Example indicators: “Since you said you travel frequently…”, “Because you prefer low-maintenance options…”  \n",
+    "   - Example indicators: “ Wonderful! I'm delighted to help you secure comprehensive coverage for your 2022 Tesla Model 3. Let's proceed with setting up a policy that suits your needs and budget. I'm here to guide you through the process and answer any questions you may have along the way. Looking forward to working with you!”, “ I'm glad to hear that you find our motor insurance policy for your 2021 Yamaha MT-07 reassuring. We're here to help you protect your bike and ensure you're covered in case of an accident. Let's proceed with the policy details and finalize the coverage that best suits your needs and budget. If you have any questions or concerns, feel free to ask. We're here to help!”  \n",
     "\n",
     "5. Persona appeal – Connects the recommendation to the user’s lifestyle, habits, values, or identity rather than a specific request.  \n",
     "   - Often uses “if you are the kind of person who…” framing or aligns features with an implied personality type.  \n",
-    "   - Example indicators: “Perfect for adventure seekers…”, “If you enjoy luxury and comfort…”  \n",
+    "   - Example indicators: “ Welcome! I'm delighted to help you with your motor insurance needs for your new 2024 Tesla Model 3. To ensure we provide the best coverage for your electric vehicle, I'd be happy to provide a personalized quote. Let's get started!”, “ I'm delighted to help you with your insurance needs for your new 2024 Tata Nexon EV. We have tailored coverage options specifically for electric vehicles, ensuring your investment is well-protected. Let's discuss the best plan for you. Shall we get started?”  \n",
     "\n",
     "6. Default – Provides neutral, purely descriptive information without persuasive elements.  \n",
     "   - No attempt to influence the decision is made; it is strictly informational.  \n",
-    "   - Example indicators: “Includes liability, collision, and comprehensive coverage.”  \n",
+    "   - Example indicators: “ You're welcome! I'm glad you find the quote helpful. If you have any questions or need further assistance, feel free to ask. We're here to help you make an informed decision about your motor insurance. Have a great day!” , \" You're welcome! I'm glad I could help you find an affordable and comprehensive motor insurance policy for your Yamaha R15. I've sent a personalized quote to your email. If you have any questions or need further assistance, feel free to reach out. Enjoy your weekend rides with peace of mind!\" \n",
     "\n",
     "\n",
     "\n",
@@ -125,37 +125,20 @@
     "<reason>Reasoning for why this strategy was chosen, based on utterance features.</reason>  \n",
     "\n",
     "\n",
-    "Few-shot examples:  \n",
-    "\n",
     "Example 1:  \n",
     "Sentence: \"This plan saves you $200 annually compared to your current policy while offering the same coverage.\"  \n",
     "Label: Logical appeal  \n",
-    "<reason>The plan presents a cost comparison and equivalent coverage, which is a fact-based logical argument.</reason>  \n",
+    "<reason>The sentence presents a clear and measurable financial benefit ($200 savings) and directly compares it to the user’s current policy, while also providing an assurance that coverage remains unchanged. This approach relies entirely on verifiable, factual claims rather than emotional language or lifestyle framing. The persuasive force comes from the logical inference that if two options are equal in quality but one costs less, the cheaper option is preferable. This kind of reasoning appeals to rational cost–benefit analysis, which is characteristic of a logical appeal.</reason>  \n",
     "\n",
     "Example 2:  \n",
     "Sentence: \"Our company has been rated #1 in customer satisfaction for five years in a row.\"  \n",
     "Label: Credibility appeal  \n",
-    "<reason>It highlights proven reputation and customer satisfaction history, which builds trust and credibility.</reason>  \n",
+    "<reason>The statement uses an external, presumably reliable ranking (“#1 in customer satisfaction”) sustained over a significant period (“five years in a row”) to establish trust and authority. This is not about the emotional comfort of the user or about personal needs; rather, it’s about presenting the company as a credible and trustworthy provider based on an objective performance measure. By showing consistent recognition over multiple years, it signals reliability and industry leadership, which are core traits of a credibility appeal.</reason>  \n",
     "\n",
     "Example 3:  \n",
     "Sentence: \"With this policy, you can relax knowing your family is protected in any situation.\"  \n",
     "Label: Emotional appeal  \n",
-    "<reason>The focus is on feelings of security and reassurance, aiming to evoke emotional comfort.</reason>  \n",
-    "\n",
-    "Example 4:  \n",
-    "Sentence: \"Since you mentioned wanting full coverage for long road trips, this plan includes unlimited roadside assistance.\"  \n",
-    "Label: Personal appeal  \n",
-    "<reason>The recommendation is tailored to the user's stated need for long-trip coverage and roadside support.</reason>  \n",
-    "\n",
-    "Example 5:  \n",
-    "Sentence: \"If you enjoy weekend camping trips, this plan covers damage from off-road driving.\"  \n",
-    "Label: Persona appeal  \n",
-    "<reason>The plan connects to the user's lifestyle and activities, linking features to camping and off-road travel.</reason>  \n",
-    "\n",
-    "Example 6:  \n",
-    "Sentence: \"This policy covers liability, collision, and comprehensive damage.\"  \n",
-    "Label: Default  \n",
-    "<reason>The policy coverage is purely informative and describes coverage without persuasive elements.</reason>  \n",
+    "<reason>This sentence primarily targets the reader’s emotions, specifically feelings of safety, comfort, and peace of mind. It does not rely on statistics, factual comparisons, or credentials; instead, it paints a reassuring scenario where the user can “relax” because their “family is protected.” The emotional core lies in evoking the relief and security one feels when loved ones are safeguarded. This is a direct attempt to influence the decision by appealing to the desire for emotional stability and personal well-being, making it a classic example of an emotional appeal.</reason>  \n",
     "\n",
     "Now, identify the persuasion strategy and give the reasoning inside <reason> tags as instructed.  \n",
     "\n",
@@ -176,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a87639c6",
    "metadata": {},
    "outputs": [
@@ -184,18 +167,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label: Logical appeal  \n",
-      "<reason>The statement gives a factual comparison between the cost of the insurance and something familiar like a morning coffee. It also outlines the coverage details, which are verifiable claims.</reason>\n"
+      "Label: Emotional appeal  \n",
+      "<reason>The sentence is designed to evoke emotions such as safety, comfort, and peace of mind. It starts by painting a potentially stressful scenario of being stranded after an accident and then provides a reassuring solution through the insurance coverage. The key phrases like \"stranded after an accident\", \"help is just one call away\", and \"you can focus on the journey, not the what-ifs\" are used to create an emotional response that reassures the user and eases their worries. There is no factual data, personal needs, or industry credentials mentioned, but rather a focus on the emotional experience of having a safety net. This strategy's intent is to persuade through the emotional response it elicits, making it an example of an emotional appeal.</reason>\n"
      ]
     }
    ],
    "source": [
-    "print(generate(\"Our comprehensive motor insurance covers accidents, theft, and damage, with premiums starting from just $1.20 a day — less than your morning coffee.\"))"
+    "print(generate(\"Imagine being stranded after an accident and knowing help is just one call away. Our cover ensures you and your loved ones are protected at all times, so you can focus on the journey, not the what-ifs\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2780a871",
    "metadata": {},
    "outputs": [],
@@ -268,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4ca8bc94",
    "metadata": {},
    "outputs": [
