--- a/Expert Datatset/Engagement/llama3b.ipynb
+++ b/Expert Datatset/Engagement/llama3b.ipynb
@@ -7,6 +7,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/DATA/rohan_kirti/miniconda3/envs/nilenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -17,18 +25,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/DATA/rohan_kirti/miniconda3/envs/nilenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 6/6 [00:07<00:00,  1.30s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:01<00:00,  1.06it/s]\n"
      ]
     }
    ],
    "source": [
-    "print(\"Loading model and tokenizer...\")\n",
-    "import torch\n",
+    "# %%\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
-    "\n",
-    "model_name = \"microsoft/Phi-3-medium-128k-instruct\"\n",
+    "print(\"Loading model and tokenizer...\")\n",
+    "model_name = \"meta-llama/Llama-3.2-3B\"\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    model_name,\n",
@@ -41,40 +46,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "32ea63dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cuda:0\n"
-     ]
-    }
-   ],
-   "source": [
-    "pipe = pipeline(\n",
-    "    \"text-generation\",\n",
-    "    model=model,\n",
-    "    tokenizer=tokenizer,\n",
-    ")\n",
-    "\n",
-    "generation_args = {\n",
-    "    \"max_new_tokens\": 500,\n",
-    "    \"return_full_text\": False,\n",
-    "    \"temperature\": 0.7,\n",
-    "    \"do_sample\": True,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "06468fe0",
+   "id": "9e865ca9",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate(sentence:str):\n",
+    "   \n",
     "    prompt = f\"\"\"You are a Persuasion Strategy labeling expert.\n",
     "    You are given an utterance.  \n",
     "Your task is to identify and label the persuasion strategy it uses from the defined list of six strategies.  \n",
@@ -140,40 +117,70 @@
     "Label: Emotional appeal  \n",
     "<reason>This sentence primarily targets the reader’s emotions, specifically feelings of safety, comfort, and peace of mind. It does not rely on statistics, factual comparisons, or credentials; instead, it paints a reassuring scenario where the user can “relax” because their “family is protected.” The emotional core lies in evoking the relief and security one feels when loved ones are safeguarded. This is a direct attempt to influence the decision by appealing to the desire for emotional stability and personal well-being, making it a classic example of an emotional appeal.</reason>  \n",
     "\n",
+    "Example 4: \n",
+    "Sentence: \"If you enjoy weekend camping trips, this plan covers damage from off-road driving.\"\n",
+    "Label: Persona appeal\n",
+    "<reason>The sentence clearly ties the insurance plan’s benefits to a specific lifestyle and recreational activity—weekend camping trips combined with off-road driving. Rather than appealing to the user’s emotions or providing factual comparisons, it frames the plan as particularly suited to individuals whose hobbies and identity involve outdoor adventure. This creates a sense of personal relevance based on lifestyle alignment: if the listener identifies with this activity, the plan will feel naturally “for them.” Such targeting based on hobbies, identity, or habitual activities is the hallmark of a persona appeal.</reason>  \n",
+    "\n",
+    "Example 5: \n",
+    "Sentence: \"Coverage applies to vehicles up to 10 years old, with claims processed within 7 business days.\"\n",
+    "Label: Default\n",
+    "<reason>This statement is purely informational, providing specific operational details about the policy—vehicle age limit and claim processing timeframe. It does not attempt to influence the decision through emotional triggers, credibility signals, or lifestyle connections. Nor does it present a comparative or cost–benefit argument; it simply conveys service terms in a factual manner. Because the language is neutral and the intent is to inform rather than persuade, it fits the definition of a default case, where content is descriptive without embedded persuasive strategy.</reason>  \n",
+    "\n",
     "Now, identify the persuasion strategy and give the reasoning inside <reason> tags as instructed.  \n",
     "\n",
     "Sentence: \"{sentence}\"  \n",
     "Label:  \n",
     "<reason></reason>  \n",
     "\"\"\"\n",
-    "\n",
-    "    messages = [\n",
-    "        {\"role\": \"system\", \"content\": \"you are a helpful assistant. Label the utterance based on Persuasion Strategy and provide the reason\"},\n",
-    "        {\"role\": \"user\",  \"content\": prompt},\n",
-    "    ]\n",
-    "\n",
-    "    output = pipe(messages, **generation_args)\n",
-    "    response= output[0]['generated_text']\n",
-    "    return response.strip()\n"
+    "    \n",
+    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "    input_length = inputs['input_ids'].shape[1]\n",
+    "    # Generate text\n",
+    "    outputs = model.generate(\n",
+    "        **inputs,\n",
+    "        max_new_tokens=100,\n",
+    "        do_sample=True,\n",
+    "        top_p=0.9,\n",
+    "        temperature=0.7,\n",
+    "        \n",
+    "    )\n",
+    "    print(outputs)\n",
+    "    # Decode and print response\n",
+    "    generated_tokens = outputs[0][input_length:]\n",
+    "    print(generated_tokens)\n",
+    "    response = tokenizer.decode(generated_tokens, skip_special_tokens=True)\n",
+    "    print(\"fd\",type(response))\n",
+    "    return response.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "a87639c6",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label: Emotional appeal  \n",
-      "<reason>The sentence is designed to evoke emotions such as safety, comfort, and peace of mind. It starts by painting a potentially stressful scenario of being stranded after an accident and then provides a reassuring solution through the insurance coverage. The key phrases like \"stranded after an accident\", \"help is just one call away\", and \"you can focus on the journey, not the what-ifs\" are used to create an emotional response that reassures the user and eases their worries. There is no factual data, personal needs, or industry credentials mentioned, but rather a focus on the emotional experience of having a safety net. This strategy's intent is to persuade through the emotional response it elicits, making it an example of an emotional appeal.</reason>\n"
+      "tensor([[128000,   2675,    527,  ...,     29,   2355, 128001]],\n",
+      "       device='cuda:0')\n",
+      "tensor([128001], device='cuda:0')\n",
+      "fd <class 'str'>\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(generate(\"Imagine being stranded after an accident and knowing help is just one call away. Our cover ensures you and your loved ones are protected at all times, so you can focus on the journey, not the what-ifs\"))"
+    "print(generate(\"dfgd\"))"
    ]
   },
   {
